# granite-vision-embedding-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
api/: app.py  database.py  models.py  worker.py
core/: constants.py  embedding.py  generation.py  rendering.py  search.py  types.py
docs/plans/: 2026-02-24-nomic-multimodal-design.md  2026-02-24-nomic-multimodal-plan.md  2026-02-25-configurable-dpi-design.md  2026-02-25-configurable-dpi-plan.md  2026-02-25-inline-search-design.md  2026-02-25-inline-search-plan.md  2026-02-26-multi-pdf-support-design.md  2026-02-26-multi-pdf-support-plan.md
docs/superpowers/plans/: 2026-03-20-batch-processing-plan.md  2026-03-21-rag-answer-generation.md  2026-03-23-streamlit-ui-improvements.md  2026-03-23-streamlit-ui-tests.md
docs/superpowers/specs/: 2026-03-20-batch-processing-design.md  2026-03-21-rag-answer-generation-design.md  2026-03-23-streamlit-ui-improvements-design.md  2026-03-23-streamlit-ui-tests-design.md
tests/: conftest.py  factories.py  test_api.py  test_app.py  test_core.py  test_database.py  test_generation.py  test_streamlit_app.py  test_worker.py
