[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Streamlit web app for generating vector embeddings from multiple PDF documents and searching over them using Nomic's multimodal embedding model."
requires-python = ">=3.12"
dependencies = [
    "colpali-engine>=0.3.3",
    "pymupdf>=1.25.0",
    "streamlit==1.52.2",
    "torch==2.9.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.17",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
