[project]
name = "granite-vision-embedding-pipeline"
version = "0.1.0"
description = "Streamlit web app for generating vector embeddings from PDF documents and images and searching over them using IBM Granite's Vision Embedding model."
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.25.0",
    "streamlit==1.52.2",
    "torch==2.9.1",
    "transformers>=4.50,<6",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.17",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
