[project]
name = "granite-vision-embedding-pipeline"
version = "0.1.0"
description = "Streamlit + FastAPI app for generating vector embeddings from PDF documents and images using IBM Granite's Vision Embedding model, with batch processing via a SQLite job queue."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pymupdf>=1.25.0",
    "python-multipart>=0.0.18",
    "streamlit==1.52.2",
    "torch==2.9.1",
    "transformers>=4.50,<6",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.17",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
